syntax = "proto3";

package noble.dollar.portal.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "dollar.noble.xyz/types/portal";

// Delivered is the event emitted when a vaa is successfully delivered.
message Delivered {
  bytes vaa = 1;
}

// Ref: https://github.com/wormhole-foundation/native-token-transfers/blob/3311787ab22087f5c10ab08edb6a2a5e3f7afd77/evm/src/interfaces/INttManager.sol#L26-L33
// NOTE: not all fields used in the original implementations are available & they also emit the digest which we
// don't compute.
message TransferSent {
  bytes recipient = 1;
  string amount = 2 [
    (amino.dont_omitempty) = true,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  uint32 chain = 3 [
    (gogoproto.customtype) = "uint16",
    (gogoproto.nullable) = false
  ];
  uint64 msg_sequence = 4;
}


// PeerUpdated is an event emitted whenever a peer is updated.
message PeerUpdated {
  uint32 chain = 1 [
    (gogoproto.customtype) = "uint16",
    (gogoproto.nullable) = false
  ];

  bytes old_transceiver = 2;
  bytes new_transceiver = 3;

  bytes old_manager = 4;
  bytes new_manager = 5;
}

// BridgingPathSet is an event emitted whenever a supported bridging path is set.
message BridgingPathSet {
  uint32 destination_chain_id = 1 [(gogoproto.casttype) = "uint16"];
  bytes destination_token = 2;
  bool supported = 3;
}

// OwnershipTransferred is an event emitted whenever an ownership transfer occurs.
message OwnershipTransferred {
  string previous_owner = 1;
  string new_owner = 2;
}

// StatePausedUpdated is an event emitted whenever the paused state is updated.
message StatePausedUpdated {
  bool paused = 1;
}
