syntax = "proto3";

package noble.dollar.portal.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "noble/dollar/portal/v1/portal.proto";

option go_package = "dollar.noble.xyz/types/portal";

// GenesisState defines the genesis state of the Noble Dollar Portal submodule.
message GenesisState {
  // owner is the account that controls the Noble Dollar Portal.
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // paused contains the genesis paused state of the Noble Dollar Portal.
  bool paused = 2;

  // peers contains the genesis peers of the Noble Dollar Portal.
  map<uint32, Peer> peers = 3 [
    (gogoproto.castkey) = "uint16",
    (gogoproto.nullable) = false
  ];

  // nonce contains the next available nonce used for transfers out of the Noble Dollar Portal.
  uint32 nonce = 4;
}
