syntax = "proto3";

package noble.dollar.vaults.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "dollar.noble.xyz/v2/types/vaults";

// LEGACY VAULT SYSTEM (V1) - WITHDRAWAL ONLY
//
// This package defines the legacy vault system that uses direct balance tracking.
// New deposits are NOT accepted in V1 vaults.
// Users must withdraw from V1 and deposit into V2 for new share-based vaults.
//
// V1 Operations still supported:
// - Withdrawals (full or partial)
// - Rewards claiming
// - Balance queries
//
// For new deposits, use the V2 vault system which provides:
// - Share-based accounting
// - Automatic yield compounding
// - Improved capital efficiency

// buf:lint:ignore ENUM_VALUE_PREFIX
enum VaultType {
  option (gogoproto.goproto_enum_prefix) = false;

  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  UNSPECIFIED = 0;
  STAKED = 1;
  FLEXIBLE = 2;
}

// buf:lint:ignore ENUM_VALUE_PREFIX
// PausedType controls which operations are paused on legacy V1 vaults
// Note: V1 vaults only support withdrawals, so LOCK pauses withdrawals
enum PausedType {
  option (gogoproto.goproto_enum_prefix) = false;

  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  NONE = 0; // No operations paused
  LOCK = 1; // Deposits paused (N/A for V1 - already disabled)
  UNLOCK = 2; // Withdrawals paused
  ALL = 3; // All operations paused
}

// Reward represents accumulated rewards in legacy V1 vault system
message Reward {
  int64 index = 1;
  string total = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  string rewards = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// Position represents a legacy V1 vault position (withdrawal-only)
// Users should withdraw these positions and deposit into V2 vaults for new features
message Position {
  string principal = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  int64 index = 2;
  string amount = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  google.protobuf.Timestamp time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message PositionRewards {
  string amount = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  string pending_rewards = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message PositionEntry {
  bytes address = 1;
  vaults.v1.VaultType vault = 2;
  string principal = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  int64 index = 4;
  string amount = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  google.protobuf.Timestamp time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message Stats {
  string flexible_total_principal = 1 [
    (amino.dont_omitempty) = true,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  uint64 flexible_total_users = 2;

  string flexible_total_distributed_rewards_principal = 3 [
    (amino.dont_omitempty) = true,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  string staked_total_principal = 4 [
    (amino.dont_omitempty) = true,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  uint64 staked_total_users = 5;
}
